--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,12 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a class="nav-link" href="#">Recipes</a></li>
-        <li><a class="nav-link" href="#">Shopping List</a></li>
+        <li (click)="onSelect('recipes')">
+          <a class="nav-link" href="#">Recipes</a>
+        </li>
+        <li (click)="onSelect('shopping-list')">
+          <a class="nav-link" href="#">Shopping List</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
