--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,26 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id=name class="form-control">
+          <input type="text" id="name" class="form-control" #nameInput />
         </div>
         <div class="col-sm-2">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control">
+          <input
+            min="1"
+            step="1"
+            type="number"
+            id="amount"
+            class="form-control"
+            value="1"
+            #amountInput
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-success" type="submit" (click)="(onAddItem)">
+            Add
+          </button>
           <button class="btn btn-danger">Delete</button>
           <button class="btn btn-primary">Clear</button>
         </div>
