--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -21,7 +21,11 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="(onAddItem)">
+          <button
+            class="btn btn-success"
+            type="submit"
+            (click)="onAddItem($event)"
+          >
             Add
           </button>
           <button class="btn btn-danger">Delete</button>
