--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (selectedElement)="onSelectPage($event)"></app-header>
+<app-header [(path)]="selectedPage"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
