--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (onSelectRecipe)="selectRecipe($event)"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
     <app-recipe-detail
-      [recipe]="selectedRecipe"
       *ngIf="selectedRecipe; else infoText"
+      [recipe]="selectedRecipe"
     ></app-recipe-detail>
     <ng-template #infoText> Please Select a recipe </ng-template>
   </div>
