--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,25 +1,25 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <a class="navbar-brand" routerLink="/">Recipe Book</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li (click)="onSelect('recipes')">
-          <a class="nav-link" href="#">Recipes</a>
+        <li routerLinkActive="active" (click)="onSelect('recipes')">
+          <a class="nav-link" routerLink="recipes">Recipes</a>
         </li>
-        <li (click)="onSelect('shopping-list')">
-          <a class="nav-link" href="#">Shopping List</a>
+        <li routerLinkActive="active" (click)="onSelect('shopping-list')">
+          <a class="nav-link" [routerLink]="['shopping-list']">Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li appDropdown class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button"
+          <a class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a>Save Data</a></li>
+            <li><a>Fetch Data</a></li>
           </ul>
         </li>
       </ul>
