--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active" (click)="onSelect('recipes')">
+        <li routerLinkActive="active">
           <a class="nav-link" routerLink="recipes">Recipes</a>
         </li>
-        <li routerLinkActive="active" (click)="onSelect('shopping-list')">
+        <li routerLinkActive="active">
           <a class="nav-link" [routerLink]="['shopping-list']">Shopping List</a>
         </li>
       </ul>
