--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,8 +25,8 @@
             >To shopping list</a
           >
         </li>
-        <li><a>Edit Recipe</a></li>
-        <li><a>Delete Recipe</a></li>
+        <li><a [routerLink]="['edit']">Edit Recipe</a></li>
+        <li><a (click)="onDeleteRecipe()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
