--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,10 +1,17 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onFormSubmit()" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput />
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            ngModel
+            name="name"
+            required
+          />
         </div>
         <div class="col-sm-2">
           <label for="amount">Amount</label>
@@ -14,18 +21,29 @@
             type="number"
             id="amount"
             class="form-control"
-            value="1"
-            #amountInput
+            name="amount"
+            [ngModel]="'1'"
+            required
+            [pattern]="'^[1-9]+[0-9]*$'"
           />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAddItem()">
-            Add
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">
+            {{ editMode ? "Update" : "Add" }}
           </button>
-          <button class="btn btn-danger">Delete</button>
-          <button class="btn btn-primary">Clear</button>
+          <button
+            class="btn btn-danger"
+            type="button"
+            *ngIf="editMode"
+            (click)="onDelete()"
+          >
+            Delete
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onFormClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
